# ISTAI

./: .gitignore  README.md  docker-compose.yml  prometheus.yml  promtail-config.yaml
api/: .dockerignore  Dockerfile  dockerfile  dockerfile.txt  pyproject.toml  requirements.txt
api/app/: dependencies.py  main.py  result.txt  users.py
api/app/data/: questions.json  raw_questions.txt  readingcards.json  temp_audio_7cc034f8c85e45f7b3e3155ba3d74d85.webm  temp_audio_b9817a4d4a154a20af2d65c8b443beea.webm  temp_audio_bc9e333b30144f0bbcf4cb68ced1bb8b.webm
api/app/data/html/: cookie.html  cookie.txt  forgot.html
api/app/data/temp/: temp_audio_3e4f830b482940ce9ca7bf9cd0d7739f.webm  temp_audio_9f097dda2999438f806b4636badbff47.webm
api/app/lib/: auth_db.py  celery_app.py  conv_agent.py  conversation_agents.py  extract_text.py  general_agents.py  groq_audio.py  phonemizer.py  pillow_test.py  prompts.py  pronunciation_agent.py  send_notification.py  sentence_agents.py  test.html  test.txt  test_agents.py  utils.py
api/app/migrations/: env.py
api/app/migrations/versions/: 113cf9c1bb36_.py  123983bb4834_.py  16b6afc63517_.py  2340a35fc586_.py  28b3f6784f81_.py  3e6e48576073_.py  66b1a3a59ce2_.py  684a27479b07_.py  69fcc2b935f4_.py  792527a1ec16_.py  7ecafe8f1c5e_.py  84d0adf1723f_.py  8e059e1e4743_.py  98dff747ab76_.py  a14b6132a2f0_.py  be9a42e7dda9_add_cascade_delete_to_questionnaire_.py  c5e18bb14c78_.py  c6249df22416_.py  cb1f08d48d72_.py  cc1a5d7dcc2c_.py  d1d2f081df84_.py  d861d655c240_.py  ebcc33e3bfcf_.py  f00673c0265f_.py  fcf5a8fa8a9e_.py
api/app/migrations/versions_backup/: 103c08bb00e1_.py  123983bb4834_.py  1ef560253502_.py  38d84c2d16ae_.py  3b7f680980b4_.py  4337c95e354c_.py  6050c3f96c06_.py  6846912b189f_.py  684a27479b07_.py  93fb97caca28_.py  b1192855028c_.py  d94124a60465_.py  df3c27a4468b_.py  ed2e786b76e9_.py  f0e85e1b8ffc_.py
api/app/routers/: analytics.py  avatar.py  chat.py  email.py  notifications.py  practice_test.py  pronunciation_test.py  questionnaire.py  questions.py  reading_cards.py  results.py  stt_ws.py  subscription.py  transcriptions.py
api/app/schemas/: analytics.py  chat.py  db_tables.py  notifications.py  practice_test.py  pronunciation.py  questionnaire.py  questions.py  subscriptions.py  transcriptions.py  user.py
api/test/: agents.py
client/: .dockerignore  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
client/app/api/tts/: route.ts
client/components/: Footer.tsx  LogoWithIcon.tsx  MainButton.tsx  NavBar.tsx  NotFoundMain.tsx  ProfileLink.tsx  ToastCustom.tsx  UnexpectedError.tsx  loadingSmallUI.tsx  loadingUI.tsx
client/components/auth/: EnterCode.tsx
client/components/dashboard/: AppSidebar.tsx  BandScoreCards.tsx  BandScoreChart.tsx  BandScoreFallback.tsx  CommonFallback.tsx  CouponHeader.tsx  DailyStreak.tsx  DashboardFooter.tsx  DashboardHeader.tsx  FloaterAction.tsx  Greeting.tsx  MistakesCard.tsx  NewTest.tsx  NotificationComponent.tsx  PracticeTestDialogInfo.tsx  PracticeTests.tsx  PronCheckControls.tsx  PronCheckDialog.tsx  PronCheckResults.tsx  PronunCheckCard.tsx  QuickActions.tsx  RadarChart.tsx  RecentPracticeTests.tsx  RecentTestsFallback.tsx  SearchPages.tsx  StatisticsCards.tsx  TestTipsGeneral.tsx  UpgradePro.tsx
client/components/home/: Advantages.tsx  AppFaq.tsx  ButtonPrimary.tsx  ButtonSecondary.tsx  Criteria.tsx  FaqItem.tsx  FeedbackInfo.tsx  Hero.tsx  NavBar.tsx  PlansPricing.tsx  PowerfulFeatures.tsx  StaticPlansPricing.tsx  Tag.tsx  TestInfo.tsx
client/components/legal/: CookiePolicy.tsx  Legal.tsx  PrivacyPolicy.tsx  RefundPolicy.tsx  TermsConditions.tsx
client/lib/: actions.ts  avatarStore.ts  chatStore.ts  checkout.ts  constants.ts  metadata.ts  metadataStore.ts  notificationStore.ts  openai.ts  practiceTestStore.ts  queries.ts  redisClient.ts  refundStore.ts  s3.ts  subscriptionStore.ts  testSessionStore.ts  testTranscriptionStore.ts  ttsStore.ts  types.ts  userStorage.ts  utils.ts
nginx/: nginx.conf
(+99 files in other folders)
